syntax = "proto3";

package io.mmtx.protocol.protobuf;

import "abstractTransactionResponse.proto";
import "branchStatus.proto";

option java_multiple_files = true;
option java_outer_classname = "AbstractBranchEndResponse";
option java_package = "io.mmtx.codec.protobuf.generated";

// PublishRequest is a publish request.
message AbstractBranchEndResponseProto {

    AbstractTransactionResponseProto abstractTransactionResponse =1;
    string xid = 2;
    int64 branchId = 3;
    BranchStatusProto branchStatus = 4;
}