syntax = "proto3";

package io.mmtx.protocol.protobuf;

import "resultCode.proto";
import "abstractMessage.proto";
option java_multiple_files = true;
option java_outer_classname = "AbstractResultMessage";
option java_package = "io.mmtx.codec.protobuf.generated";

// PublishRequest is a publish request.
message AbstractResultMessageProto {
    AbstractMessageProto AbstractMessage=1;
    ResultCodeProto resultCode = 2;
    string msg = 3;
}