syntax = "proto3";

package io.mmtx.protocol.protobuf;

import "abstractBranchEndResponse.proto";


option java_multiple_files = true;
option java_outer_classname = "BranchRollbackResponse";
option java_package = "io.mmtx.codec.protobuf.generated";

// PublishRequest is a publish request.
message BranchRollbackResponseProto {
    AbstractBranchEndResponseProto abstractBranchEndResponse = 1;
}